<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.example.sharingapp.EditContactActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/username_tv"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/username_hint"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <EditText
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_hint"
            android:inputType="text"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:maxLength="24"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/email_tv"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/email_hint"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLength="24"
            android:textAppearance="@android:style/TextAppearance.Medium" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/save_edited_user_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.25"
            android:onClick="saveContact"
            android:text="@string/save"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <Button
            android:id="@+id/delete_edited_user_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.25"
            android:onClick="deleteContact"
            android:text="@string/delete"
            android:textAppearance="@android:style/TextAppearance.Medium" />

    </LinearLayout>
</LinearLayout>
